--- a/components/Tooltip/Tooltip.scss
+++ b/components/Tooltip/Tooltip.scss
@@ -20,7 +20,7 @@ $calloutSize: 10px;
     background-color: $white;
     border: 1px solid $mainTextColor;
     border-radius: 5px;
-    // TODO (hallucinogen): we don't want to use z-index. But this makes everything easier
+    // TODO we don't want to use z-index. But this makes everything easier
     // since we can do everything in CSS. We need to revisit this in the future
     z-index: 100;
   }
