--- a/components/BrowserFilter/BrowserFilter.scss
+++ b/components/BrowserFilter/BrowserFilter.scss
@@ -48,7 +48,7 @@
 }
 
 .entry, .title {
-  @include DosisFont;
+  @include NotoSansFont;
   position: relative;
   bottom: -4px;
   font-size: 14px;
