--- a/components/Sidebar/Sidebar.scss
+++ b/components/Sidebar/Sidebar.scss
@@ -64,7 +64,7 @@
 }
 
 .footer {
-  @include DosisFont;
+  @include NotoSansFont;
   position: absolute;
   background: #05283c;
   height: 36px;
@@ -351,7 +351,7 @@ a.subitem {
   }
 
   a {
-    @include DosisFont;
+    @include NotoSansFont;
     display: block;
     height: 30px;
     line-height: 31px;
