--- a/src/dashboard/Data/Browser/Browser.scss
+++ b/src/dashboard/Data/Browser/Browser.scss
@@ -22,6 +22,10 @@
   &.safari {
     -webkit-transform: translate3d(0,0,0);
   }
+
+  &.showAddRow {
+    bottom: 36px;
+  }
 }
 
 @media (max-width: 980px) {
@@ -89,6 +93,7 @@
   top: 30px;
   bottom: 0;
   left: 0;
+  width: 100%;
   min-width: 100%;
   overflow-y: auto;
   overflow-x: hidden;
@@ -96,6 +101,15 @@
 
 .table .empty {
   top: 126px;
+}
+
+.rowsHolder {
+  position: absolute;
+  top: 0;
+  right:0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
 }
 
 .tableRow {
@@ -121,13 +135,15 @@
 }
 
 .addRow {
-  height: 30px;
+  position: fixed;
+  left: 300px;
+  right: 0;
+  bottom: 0;
+  height: 36px;
   padding: 8px;
-
-  a {
-    cursor: pointer;
-    display: inline-block;
-  }
+  display: inline-flex;
+  align-items: center;
+  border-top: 1px solid #ccc;
 
   svg {
     fill: $blue;
@@ -135,6 +151,42 @@
     &:hover {
       fill: $darkBlue;
     }
+  }
+
+  a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 14px;
+    font-size: 12px;
+    font-weight: 700;
+    height: 24px;
+    padding: 0 10px;
+    border-radius: 2px;
+    border: 1px solid transparent;
+  }
+
+  + .rowsHolder {
+    bottom: 60px;
+  }
+}
+
+.addNewRow {
+  position: relative;
+  margin-bottom: 30px;
+  border-bottom: 1px solid #169CEE;
+
+  &:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: -1px;
+    border-bottom: 2px solid #0092ff;
+  }
+
+  + .rowsHolder {
+    position: relative;
   }
 }
 
