--- a/src/stylesheets/base.scss
+++ b/src/stylesheets/base.scss
@@ -19,6 +19,7 @@ body {
   box-sizing: border-box;
   color: $mainTextColor;
   background-color: #110D11;
+  padding-top: $header-height;
 }
 
 :global(#browser_mount) {
