--- a/src/stylesheets/globals.scss
+++ b/src/stylesheets/globals.scss
@@ -51,6 +51,12 @@ $pushDetailsContent: #66637A;
 $darkPurple: #8D11BA;
 $blueGreen: #11A4BA;
 
+// Back4App colors
+$light-blue: #208AEC;
+
+// Back4App sizes
+$header-height: 80px;
+
 @mixin NotoSansFont {
   font-family: 'Noto Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
