Working on Header

--- a/src/components/back4App/HamburgerButton/HamburgerButton.scss
+++ b/src/components/back4App/HamburgerButton/HamburgerButton.scss
@@ -1,6 +1,9 @@
-@import 'stylesheets/globals.scss';
+@import 'stylesheets/back4app.scss';
 
 .hamburgerButton {
   font-size: 30px;
   color: $light-blue;
+
+  border: none;
+  background-color: transparent;
 }
