--- a/src/components/back4App/HeaderNav/HeaderNav.scss
+++ b/src/components/back4App/HeaderNav/HeaderNav.scss
@@ -1,13 +1,9 @@
-@import 'stylesheets/globals.scss';
+@import 'stylesheets/back4app.scss';
 
 .nav {
-  height: $header-height;
-
   .menu {
     display: flex;
-    align-items: center;
-    height: 100%;
-    
+
     .dropdown:hover .dropdown-menu {
       display: block;
       margin-top: 0px;
