--- a/src/stylesheets/base.scss
+++ b/src/stylesheets/base.scss
@@ -6,6 +6,7 @@
  * the root directory of this source tree.
  */
 @import 'globals.scss';
+@import 'back4app.scss';
 
 html, body {
   min-height: 100vh;
