--- a/src/components/back4App/Header/Header.scss
+++ b/src/components/back4App/Header/Header.scss
@@ -9,28 +9,33 @@
   height: $header-height;
   background-color: #FFF;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, .2);
-
   font-family: 'Raleway';
   font-size: 16px;
-
   padding-right: 45px;
 
   .left-side {
     display: flex;
-    width: 300px;
-    padding-left: 8px;
+    min-width: 280px;
+    max-width: 280px;
+    padding-left: 28px;
 
     .hamburger-wrapper {
-      display: flex;
-      padding-left: 10px;
-      padding-right: 20px;
+      display: none;
+      height: 40px;
+      margin: auto;
+      margin-left: 10px;
+      margin-right: 20px;
     }
 
+    .logo-wrapper {
+      width: 270px;
+    }
   }
 
   .right-side {
     display: flex;
     width: 100%;
-    padding: 23px 0 0 10px;
+    padding: 24px 0 0 10px;
+    white-space: nowrap;
   }
 }
