--- a/src/components/back4App/Logo/Logo.scss
+++ b/src/components/back4App/Logo/Logo.scss
@@ -1,19 +1,12 @@
 .logo {
-  display: flex;
-  width: 100px;
-  height: 80px;
-  width: 270px;
+  display: inline-flex;
+  align-items: center;
 
   .face {
-    width: 50px;
-    height: 80px;
-    background-color: green;
+    outline: 1px solid green;
   }
 
   .text {
-    width: 120px;
-    height: 80px;
-    background-color: blue;
+    // outline: 1px solid blue;
   }
-
 }
