--- a/src/dashboard/Data/Browser/Browser.scss
+++ b/src/dashboard/Data/Browser/Browser.scss
@@ -6,6 +6,7 @@
  * the root directory of this source tree.
  */
 @import 'stylesheets/globals.scss';
+@import 'stylesheets/back4app.scss';
 
 .browser {
   position: fixed;
@@ -16,6 +17,7 @@
   overflow: auto;
   padding-top: 30px;
   transition: left 0.5s ease-in;
+  margin-top: $header-height;
   // fix for safari scrolling issue:
   // https://css-tricks.com/forums/topic/safari-for-ios-z-index-ordering-bug-while-scrolling-a-page-with-a-fixed-element/
   // only applying to safari as a side effect of this is emptystate component centering is off
