--- a/src/components/back4App/Sidebar/Sidebar.scss
+++ b/src/components/back4App/Sidebar/Sidebar.scss
@@ -64,8 +64,8 @@ $sidebar-scroll-color: #e0e5e8;
       padding-top: 20px;
       padding-bottom: 20px;
       overflow-x: hidden;
-			height: calc(100% - 120px);
-
+      height: calc(100vh - 225px);
+      
       &::-webkit-scrollbar {
         width: $sidebar-scroll-width;
       }
@@ -77,19 +77,11 @@ $sidebar-scroll-color: #e0e5e8;
 
       .menu {
         font-family: 'Raleway';
-        height: 240px;
+        height: 162px;
 
         .menu-item {
           padding-left: 30px;
           margin-bottom: 11px;
-
-          &.active {
-            .menu-item-header {
-              .link {
-                font-weight: 700;
-              }
-            }
-          }
 
           .menu-item-header {
             i {
@@ -114,12 +106,7 @@ $sidebar-scroll-color: #e0e5e8;
               position: relative;
               float: right;
               padding-right: 10px;
-              // margin-top: 6px;
               font-size: 24px;
-
-              &.active {
-                display: block;
-              }
             }
 
             .link {
@@ -127,12 +114,16 @@ $sidebar-scroll-color: #e0e5e8;
               font-weight: normal;
               font-size: 16px;
               color: #292b2c;
-
-              &.active {
-                font-weight: 700;
-              }
             }
 
+            &.active {
+              .link {
+                font-weight: 700;
+              }
+              .icon-caret {
+                display: block;
+              }
+            }
           }
         }
       }
@@ -143,23 +134,12 @@ $sidebar-scroll-color: #e0e5e8;
     width: 100%;
     background-color: #fff;
     text-align: center;
-
-
-    .create-new {
+    
+    .new-app-button {
       display: block;
-  		cursor: pointer;
-  		text-transform: uppercase;
-  		font-weight: 700;
-  		font-size: 16px;
-  		background: $green;
-  		border: none;
-  		color: #FFF;
   		height: 40px;
   		padding: 10px 16px 0 16px;
       margin: 20px 30px 20px 30px;
-  		border-radius: 3px;
-  		text-decoration: none;
-  		white-space: nowrap;
   	}
 
     .account {
@@ -189,8 +169,4 @@ $sidebar-scroll-color: #e0e5e8;
     }
   }
 
-}
-
-a.link.active {
-  font-weight: 700;
 }
