--- a/src/components/back4App/Header/Header.scss
+++ b/src/components/back4App/Header/Header.scss
@@ -12,7 +12,7 @@
   font-family: 'Raleway';
   font-size: 16px;
   padding-right: 45px;
-
+  
   .left-side {
     display: flex;
     min-width: 247px;
@@ -40,5 +40,26 @@
     width: 100%;
     padding: 24px 0 0 10px;
     white-space: nowrap;
+  }
+
+  // Responsive
+  @media(max-width: 1100px) {
+    padding-right: 14px;
+    .left-side {
+      min-width: 44px;
+      max-width: 44px;
+      margin-left: 14px;
+    }
+
+    .logo-face {
+      display: none;
+
+      @media(max-width: 680px) {
+        display: block;
+        position: absolute;
+        left: 50%;
+        margin-left: -70px;
+      }
+    }
   }
 }
