--- a/src/components/back4App/HeaderNav/HeaderNav.scss
+++ b/src/components/back4App/HeaderNav/HeaderNav.scss
@@ -1,6 +1,9 @@
 @import 'stylesheets/back4app.scss';
 
 .nav {
+  display: flex;
+  flex-basis: 100%;
+  
   .menu {
     display: flex;
 
@@ -8,5 +11,10 @@
       display: block;
       margin-top: 0px;
     }
+  }
+
+  // Responsive
+  @media(max-width: 1100px) {
+    justify-content: center;
   }
 }
