--- a/src/components/SlowQueriesFilter/SlowQueriesFilter.scss
+++ b/src/components/SlowQueriesFilter/SlowQueriesFilter.scss
@@ -107,3 +107,17 @@
 .active .row input {
   background: #0E69A1;
 }
+
+.footer {
+  background: rgba(0,0,0,0.2);
+  padding: 11px 0;
+  text-align: center;
+
+  > a {
+    margin-right: 10px;
+
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+}
