--- a/src/components/ExplorerQueryPicker/ExplorerQueryPicker.scss
+++ b/src/components/ExplorerQueryPicker/ExplorerQueryPicker.scss
@@ -36,7 +36,7 @@
   .del {
     position: absolute;
     right: 24px;
-    color: #d8d8d8;
+    color: $red;
     font-size: 18px;
     line-height: 18px;
   }
