--- a/src/components/ChromeDropdown/ChromeDropdown.scss
+++ b/src/components/ChromeDropdown/ChromeDropdown.scss
@@ -6,7 +6,7 @@
  * the root directory of this source tree.
  */
 @import 'stylesheets/globals.scss';
-       
+
 .dropdown {
   display: inline-block;
   vertical-align: top;
@@ -47,6 +47,27 @@
   }
 }
 
+
+.withoutArrow {
+  position: relative;
+  height: 30px;
+  line-height: 30px;
+  padding: 0 30px 0 10px;
+  background: $purple;
+  border-radius: 5px;
+  color: white;
+  cursor: pointer;
+
+  div {
+    overflow-x: hidden;
+    text-overflow: ellipsis;
+  }
+
+  &.blue {
+    background: $darkBlue;
+  }
+}
+
 .menu {
   max-height: 360px;
   overflow-y: auto;
@@ -61,4 +82,9 @@
       background: rgba(255, 255, 255, 0.1);
     }
   }
+}
+
+.disabled {
+  pointer-events: none;
+  opacity: .65;
 }
