--- a/src/dashboard/Data/CloudCode/CloudCode.scss
+++ b/src/dashboard/Data/CloudCode/CloudCode.scss
@@ -7,11 +7,7 @@
  */
 @import 'stylesheets/globals.scss';
 @import 'stylesheets/bootstrap-custom.scss';
-
-.loading {
-  position: relative;
-  min-height: 100vh;
-}
+@import "B4ACloudCode";
 
 .source {
   position: relative;
@@ -30,57 +26,4 @@
   left: 0;
   right: 0;
   bottom: 0;
-}
-
-.title {
-  padding-top: 41px;
-  margin-bottom: 21px;
-
-  div {
-    float: left;
-  }
-
-  p {
-    font-family: Noto Sans;
-    font-size: 30px;
-    font-weight: bold;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: normal;
-    letter-spacing: normal;
-    color: #224969;
-  }
-
-  a {
-    margin-top: 7px;
-  }
-
-  span {
-    font-family: Raleway;
-    font-size: 12px;
-    font-weight: bold;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: normal;
-    letter-spacing: normal;
-    text-align: center;
-    color: #ffffff;
-  }
-}
-
-.footer {
-  margin-top: 28px;
-  float: right;
-
-  span {
-    font-family: Raleway;
-    font-size: 16px;
-    font-weight: bold;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: normal;
-    letter-spacing: normal;
-    text-align: center;
-    color: #ffffff;
-  }
 }
