--- a/src/stylesheets/back4app.scss
+++ b/src/stylesheets/back4app.scss
@@ -2,5 +2,7 @@
 $light-blue: #208AEC;
 $dark-gray: #424242;
 $green: #4CAF50;
+$lightYellow: #f5e023;
+$darkYellow: #f78400;
 // Back4App sizes
 $header-height: 51px;
