--- a/src/components/CodeTree/CodeTree.scss
+++ b/src/components/CodeTree/CodeTree.scss
@@ -40,11 +40,14 @@
       float: right;
       margin-right: 10px;
 
-      span:before {
-        font-family: Material-Design-Iconic-Font;
+      span {
+        div {
+          i {
+            font-weight: bold
+          }
+        }
       }
     }
-
   }
 
   .files-tree {
