Add image support on cloud code page

--- a/src/components/CodeTree/CodeTree.scss
+++ b/src/components/CodeTree/CodeTree.scss
@@ -60,6 +60,12 @@
     border-radius: 5px;
     background-color: #0c2337;
     border: none;
+
+    img {
+      height: 100%;
+      width: 100%;
+      background-color: #f9f9f9;
+    }
   }
 }
 
