Fix style issues

--- a/src/components/B4AAlert/B4AAlert.scss
+++ b/src/components/B4AAlert/B4AAlert.scss
@@ -22,7 +22,8 @@
     width: 14px;
     height: 14px;
     font-size: 16px;
-    padding-top: 7px;
+    margin-top: -10px;
+    margin-right: -10px;
   }
 
   p {
