Feat: Add buttons on browser toolbar

--- a/src/components/Toolbar/Toolbar.scss
+++ b/src/components/Toolbar/Toolbar.scss
@@ -49,7 +49,7 @@
 
 .section {
   @include DosisFont;
-  color: #757985;
+  color: #d9d9d9;
   text-transform: uppercase;
   font-size: 8px;
   letter-spacing: 1.6px;
