--- a/src/components/VideoTutorialButton/VideoTutorialButton.scss
+++ b/src/components/VideoTutorialButton/VideoTutorialButton.scss
@@ -1,4 +1,3 @@
-@import 'stylesheets/base.scss';
 @import 'stylesheets/globals.scss';
 
 .button {
@@ -22,3 +21,14 @@
     text-decoration: none;
   }
 }
+
+.modal {
+  @include modalAnimation();
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 540px;
+  background: black;
+}
+
+@include modalKeyframes();
