--- a/src/components/B4ACodeTree/B4ACodeTree.scss
+++ b/src/components/B4ACodeTree/B4ACodeTree.scss
@@ -1,6 +1,8 @@
 @import 'stylesheets/globals.scss';
 @import 'stylesheets/bootstrap-custom.scss';
 
+$boxTreeHeight: '367px';
+
 .files-box{
   border-radius: 4px;
   background-color: #ffffff;
