fix: Deploy button align

--- a/src/dashboard/Data/CloudCode/B4ACloudCode.scss
+++ b/src/dashboard/Data/CloudCode/B4ACloudCode.scss
@@ -50,6 +50,12 @@
   margin-right: 0px;
   float: right;
 
+  .b4a-cc-deploy-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
   span {
     font-family: Raleway;
     font-size: 16px;
