--- a/src/dashboard/Data/Browser/Browser.scss
+++ b/src/dashboard/Data/Browser/Browser.scss
@@ -16,7 +16,6 @@
   bottom: 0;
   overflow: auto;
   padding-top: 30px;
-  transition: left 0.5s ease-in;
   margin-top: $header-height;
   // fix for safari scrolling issue:
   // https://css-tricks.com/forums/topic/safari-for-ios-z-index-ordering-bug-while-scrolling-a-page-with-a-fixed-element/
@@ -26,9 +25,9 @@
   }
 }
 
-@media (max-width: 980px) {
+body:global(.expanded) {
   .browser {
-    left: 0;
+    left: 54px;
   }
 }
 
