--- a/src/dashboard/TableView.scss
+++ b/src/dashboard/TableView.scss
@@ -14,11 +14,10 @@
   right: 0;
   background: #66637A;
   height: 30px;
-  transition: left 0.5s ease-in;
   white-space: nowrap;
 }
 
-@media (max-width: 980px) {
+body:global(.expanded) {
   .headers {
     left: 0;
   }
