--- a/src/components/BrowserFilter/BrowserFilter.scss
+++ b/src/components/BrowserFilter/BrowserFilter.scss
@@ -9,11 +9,18 @@
 
 .wrap {
   display: flex;
-  align-items: flex-end;
+  align-items: center;
+  justify-content: center;
   cursor: pointer;
-  height: 30px;
-  width: 32px;
-  margin: 0 10px;
+  height: 38px;
+  width: 38px;
+  margin: 0 6px;
+  padding: 4px;
+  border-radius: 5px;
+
+  &:hover {
+    background-color: rgba(255, 255, 255, 0.2);
+  }
 }
 
 .entry {
@@ -37,7 +44,7 @@
 
 .title {
   background: #797691;
-  padding: 6px 3px;
+  padding: 7px 3px;
   border-radius: 5px 5px 0 0;
 
   svg {
@@ -66,7 +73,7 @@
 
 .body {
   position: absolute;
-  top: 30px;
+  top: 31px;
   right: 0;
   border-radius: 5px 0 5px 5px;
   background: #797691;
