--- a/src/stylesheets/back4app.scss
+++ b/src/stylesheets/back4app.scss
@@ -4,5 +4,6 @@ $dark-gray: #424242;
 $green: #4CAF50;
 $lightYellow: #f5e023;
 $darkYellow: #f78400;
+$light-gray: #dfdfdf;
 // Back4App sizes
 $header-height: 51px;
